[package]
name = "aranya-example"
description = "Example Rust program using the Aranya client library"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
implicit_clone = "warn"
manual_let_else = "warn"
needless_pass_by_value = "warn"
panic = "deny"
redundant_closure_for_method_calls = "warn"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[features]
default = [
    "afc",
    "aranya-client/default",
]

afc = ["aranya-client/afc"]
preview = ["aranya-client/preview"]

# Enable debugging.
debug = []

[dependencies]
aranya-client = { workspace = true, default-features = false }

anyhow = { workspace = true }
backon = { workspace = true }
rustix = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "process", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "aranya-example"
path = "src/main.rs"
required-features = ["afc"]
test = false


[package.metadata.cargo-all-features]
always_include_features = [
    "default", # TODO: remove in #448
]
